--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,12 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<% preact.headEnd %>
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
 	</head>
 	<body>
 		<% preact.bodyEnd %>
+        <div id="custom-container">
+            <a class="github-button" href="https://github.com/CharlyCst/wasm-mem-preview" data-color-scheme="no-preference: light; light: light; dark: dark;" data-size="large" aria-label="Star CharlyCst/wasm-mem-preview on GitHub">Readme</a>
+        </div>
 	</body>
 </html>
